--- a/excercise.html
+++ b/excercise.html
@@ -14,8 +14,8 @@
     <p>Vamos a aprender<strong> HTML</strong></p>
     <span>Martes 7:26</span>
     <button type="button">Click</button>
-    <table border="1">
-      <tr>
+    <table border="10">
+      <tr border="10">
         <th>Lunes</th>
         <th>Martes</th>
         <th>Miercoles</th>
@@ -37,45 +37,18 @@
       <td></td>
       <td></td>
       <td></td>
-      <td></td>
+      <td>09:00 - 11:00 / Pensamiento economico</td>
     </tr>
     <tr>
 	</br>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-</br>
-    <tr>
-      <td>Libre</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-</br>
-    <tr>
-      <td>Libre</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-</br>
-    <tr>
       <td>18:00 - 22:00 / Fisica III</td>
-      <td>09:00 - 11:00 / Pensamiento economico</td>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
+      <td>11:00 - 13:00 / Fisica III</td>
     </tr>
-</br>
+
 </br>
     <tr>
       <td>07:00 - 09:00 / Constitución política de Colombia</td>
@@ -86,7 +59,6 @@
       <td></td>
     </tr>
 </br>
-</tr>
 </table>
 <input type="text" value="nombre" placeholder="Ingrese su nombre">
 <input type="checkbox" value="checked">
