--- a/excercise.html
+++ b/excercise.html
@@ -60,14 +60,22 @@
     </tr>
 </br>
 </table>
-<input type="text" value="nombre" placeholder="Ingrese su nombre">
-<input type="checkbox" value="checked">
-<input type="color">
-<input type="date">
-<input type="file">
-<input type="number">
-<input type="password">
-<input type="radio">
+<input type="text" value="nombre" placeholder="Ingrese su nombre"></br>
+<input type="checkbox" value="checked"></br>
+<input type="color"></br>
+<input type="date"></br>
+<input type="file"></br>
+<input type="number"></br>
+<input type="password"></br>
+<input type="radio"></br>
 <input type="range">
+<br>
+<Select>
+  <option value="Tigre">Tigre</option>
+  <option value="Venado">Venado</option>
+  <option value="Jirafa">Jirafa</option>
+  <option value="Tiburon">Tiburon</option>
+  <option value="Ballena">Ballena</option>
+</Select>
   </body>
 </html>
