--- a/excercise.html
+++ b/excercise.html
@@ -12,7 +12,7 @@
     </li>
     <p><em>Programación</em></p>
     <p>Vamos a aprender<strong> HTML</strong></p>
-    <span>Martes 7:26</span>
+    <span>Martes 7:26</span></body></br></br>
     <button type="button">Click</button>
     <table border="10">
       <tr border="10">
@@ -59,17 +59,17 @@
       <td></td>
     </tr>
 </br>
-</table>
-<input type="text" value="nombre" placeholder="Ingrese su nombre"></br>
-<input type="checkbox" value="checked"></br>
-<input type="color"></br>
-<input type="date"></br>
-<input type="file"></br>
-<input type="number"></br>
-<input type="password"></br>
-<input type="radio"></br>
+</table></br>
+<input type="text" value="nombre" placeholder="Ingrese su nombre"></br></br>
+<input type="checkbox" value="checked"></br></br>
+<input type="color"></br></br>
+<input type="date"></br></br>
+<input type="file"></br></br>
+<input type="number"></br></br>
+<input type="password"></br></br>
+<input type="radio"></br></br>
 <input type="range">
-<br>
+</br>
 <Select>
   <option value="Tigre">Tigre</option>
   <option value="Venado">Venado</option>
@@ -77,5 +77,6 @@
   <option value="Tiburon">Tiburon</option>
   <option value="Ballena">Ballena</option>
 </Select>
+<progress max="100" value="70">70%</progress>
   </body>
 </html>
