--- a/excercise.html
+++ b/excercise.html
@@ -41,7 +41,7 @@
     </tr>
     <tr>
 	</br>
-      <td>18:00 - 22:00 / Fisica III</td>
+      <td>07:00 - 09:00 / Constitución política de Colombia</td>
       <td></td>
       <td></td>
       <td></td>
@@ -49,15 +49,6 @@
       <td>11:00 - 13:00 / Fisica III</td>
     </tr>
 
-</br>
-    <tr>
-      <td>07:00 - 09:00 / Constitución política de Colombia</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
 </br>
 </table></br>
 <input type="text" value="nombre" placeholder="Ingrese su nombre"></br></br>
@@ -70,13 +61,17 @@
 <input type="radio"></br></br>
 <input type="range">
 </br>
+</br>
 <Select>
-  <option value="Tigre">Tigre</option>
+  <option value="Tigre">Tiger</option>
   <option value="Venado">Venado</option>
-  <option value="Jirafa">Jirafa</option>
-  <option value="Tiburon">Tiburon</option>
-  <option value="Ballena">Ballena</option>
+  <option value="Jirafa">giraffe</option>
+  <option value="Tiburon">Shark</option>
+  <option value="Ballena">whale</option>
 </Select>
-<progress max="100" value="70">70%</progress>
+<progress max="100" value="70"></progress>
+<div>
+  <h1>Nueva rama - August 9</h1>
+</div>
   </body>
 </html>
