--- a/excercise.html
+++ b/excercise.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Daniel Mateo Patarroyo Molina</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Burned&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <p>Universidad de Artes y Letras</p>
@@ -78,5 +82,49 @@
   <option value="Ballena">Ballena</option>
 </Select>
 <progress max="100" value="70">70%</progress>
-  </body>
+</hr><br>
+<ul>
+  <li>Manzana</li>
+  <li>Banana</li>
+  <li>Fresa</li>
+  <li>Mora</li>
+  <li>Huanabana</li>
+  <li>Lulo</li>
+</ul>
+<h1>Manzana</h1>
+<img src="./descarga.jpg" alt="" srcset=""><br>
+<h1>Banana</h1>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfCPtYyh_7pfwRIp62HD9v0TpK-rfHNT1CZA&usqp=CAU" alt="">
+<div class="lorem-ipsum"><article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non tellus et metus auctor malesuada sed ut diam. Nullam molestie euismod sapien, eget auctor metus dignissim non. Duis scelerisque tincidunt ullamcorper. Mauris at faucibus sapien. Quisque tristique tristique nibh, in rhoncus velit. Mauris scelerisque lorem vel metus consequat, at ultrices ante fringilla. Quisque ante orci, molestie tempor efficitur vitae, bibendum sed nibh. Vestibulum vehicula vehicula risus, a mattis lectus sodales efficitur. Donec commodo non velit eget venenatis. Nunc commodo justo a semper sodales. Pellentesque tempor quis diam pretium aliquet.
+
+  Sed convallis tincidunt nisl vitae varius. Ut auctor eros eu odio semper, maximus porttitor nisl consequat. Aenean et nulla lorem. Proin quis dapibus metus. Donec et posuere lacus, sed varius erat. Donec lorem justo, elementum vel purus vel, vestibulum egestas erat. Aenean eget congue est. Cras nec pharetra sapien. Sed interdum tincidunt accumsan.
+  
+  Sed a elementum nunc. Nunc cursus suscipit facilisis. Donec sollicitudin scelerisque quam sit amet facilisis. Cras risus elit, tincidunt ut leo vel, finibus pellentesque augue. In vel ligula diam. Duis vestibulum elit a bibendum ullamcorper. Vestibulum volutpat odio massa, eget pellentesque nibh imperdiet iaculis.
+  
+  Curabitur dui elit, mattis sit amet leo vel, ullamcorper sodales nunc. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed risus mauris, viverra eu pulvinar eget, accumsan eget nisi. Maecenas ornare vehicula viverra. Aenean aliquet libero sit amet quam tempus porta. Etiam dictum interdum convallis. Nunc vel iaculis justo. Pellentesque imperdiet tincidunt viverra. Etiam non cursus mauris. Nullam bibendum cursus varius. Nullam tincidunt venenatis nulla, in gravida sapien facilisis ut. Ut in enim risus. Suspendisse enim nibh, elementum vel massa vitae, tincidunt accumsan ex. Cras blandit, tellus ut tincidunt vehicula, neque ante interdum ex, sed semper enim neque ac neque. Phasellus a ipsum ornare, sagittis nisi sit amet, blandit elit. Morbi neque tortor, accumsan quis euismod et, viverra eget enim.
+  
+  Integer sit amet nunc sit amet diam mattis porttitor id vitae nisl. Donec eu pretium enim. Proin condimentum sem risus, vitae maximus odio dapibus at. Mauris imperdiet vulputate eros a accumsan. Curabitur sed purus scelerisque risus dignissim auctor. Quisque odio tellus, laoreet nec felis in, tristique mollis velit. Vestibulum ultrices enim sit amet dui porta consectetur porta at lectus. Fusce sed nunc tellus. Nulla eu finibus augue, in pellentesque elit. Integer malesuada erat eu elementum consectetur.</article></div><br>
+  <div class="lorem-ipsum"><article id="text1">Etiam mattis scelerisque justo id consequat. In egestas arcu nibh, sit amet dignissim urna maximus vel. Integer rhoncus ac leo in cursus. Sed ut nisi pulvinar, tempus arcu vitae, iaculis urna. Proin in lorem ut erat cursus tincidunt nec in velit. Vestibulum ante nisl, posuere et mattis quis, sodales nec mi. Maecenas sapien elit, sagittis at velit vitae, mattis ultricies tellus. Donec ultrices mi eros, et fermentum ligula eleifend a. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dignissim turpis at tellus vestibulum aliquet eget ut nisl. Morbi ullamcorper molestie nisl, non gravida mauris dapibus non. Pellentesque ac varius ante. Etiam aliquam ultricies lorem, vitae fermentum justo laoreet at. Sed blandit erat eu tincidunt imperdiet.</article></div><br>
+  <div class="lorem-ipsum"><article id="text2">Etiam mattis scelerisque justo id consequat. In egestas arcu nibh, sit amet dignissim urna maximus vel. Integer rhoncus ac leo in cursus. Sed ut nisi pulvinar, tempus arcu vitae, iaculis urna. Proin in lorem ut erat cursus tincidunt nec in velit. Vestibulum ante nisl, posuere et mattis quis, sodales nec mi. Maecenas sapien elit, sagittis at velit vitae, mattis ultricies tellus. Donec ultrices mi eros, et fermentum ligula eleifend a. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dignissim turpis at tellus vestibulum aliquet eget ut nisl. Morbi ullamcorper molestie nisl, non gravida mauris dapibus non. Pellentesque ac varius ante. Etiam aliquam ultricies lorem, vitae fermentum justo laoreet at. Sed blandit erat eu tincidunt imperdiet.</article></div>
+  <div class="table"></div>
+  <div class="table"></div>
+  <div class="table" id="table1"></div>
+  <p>
+    <ul id="countries">
+      <li>Colombia</li>
+      <li>USA</li>
+      <li>Argentina</li>
+    </ul>
+  </p><br>
+  <div><input id="input1" type="text" value=""></div><br><br><br>
+  <div>
+    <span id="color">Red</span>
+    <span id="color">Green</span>
+    <span id="color">Gray</span>
+    <br>
+  </div>
+  <div class="container">
+    <div class="Chinchilla"><h3>Chinchilla</h3></div>
+  </div>
+</body>
 </html>
