--- a/excercise.html
+++ b/excercise.html
@@ -6,6 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Burned&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -125,6 +127,21 @@
   </div>
   <div class="container">
     <div class="Chinchilla"><h3>Chinchilla</h3></div>
+  </div></br>
+  <div class="gradientContainer">
+    <div class="gradient"></div>
   </div>
+  <div class="cuadrito"></div>
+  <div class="animation">
+    <div class="running_like_Naruto_Container">
+      <img class="running_like_Naruto" src="./images/aebc478cfbd5a5babfe00ad880ca76fb1d997cf5_00.gif.crdownload" alt="">
+    </div>
+  </div>
+  <div class="cuadro1"></div>
+  <div class="cuadro2"></div>
+  <div class="circle"><i><span class="material-symbols-outlined">
+    mail
+    </span></i></div>
+
 </body>
 </html>
