--- a/excercise.html
+++ b/excercise.html
@@ -142,6 +142,14 @@
   <div class="circle"><i><span class="material-symbols-outlined">
     mail
     </span></i></div>
-
+    <div id="Spinner">
+      <div class="ovalo">
+        <div class="Circle">
+          <svg width="100" height="100">
+            <circle cx="50" cy="50" r="20" />
+          </svg>
+        </div>   
+      </div>
+    </div>
 </body>
 </html>
