indice fixed, indice.toFixed(2) created

--- a/fuctions/fuctions.html
+++ b/fuctions/fuctions.html
@@ -16,12 +16,14 @@
     <div>
         <h2>Indice de masa corporal</h2>
         peso
-        <input id="High" type="text">
-        masa
         <input id="Weight" type="text">
+        altura
+        <input id="High" type="text">
         <button onclick="calcular()">calcular</button>
-        <p>El imc es:</p>
-        <div id="imc"></div>
+        <div id="result_container">
+            <p>El imc es:</p>
+            <div id="imc"></div>
+        </div>
     </div>
 </body>
 </html>
